--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,21 +5,30 @@ $_button_hover:#E71414;
 $_button_active:#FF4343;
 $_background-color_light:#E5E5E5;
 
+$_color_nav_text:#FFFFFF;
+$_color_nav_hover:#BABBC5;
+$_color_nav_active:#E71414;
+
 $_color_text_title:#2D3033;
 $_color_text_min:#6C7279;
 
 // font-size
-$_font-size_text_min:1.125rem;
-$_font-size_text_title:1.5rem;
+
+$_font-size_nav_text:.8125rem; //13px
+$_font-size_text_min:1.125rem; //18px
+$_font-size_text_title:1.5rem; //24px
+
+$_font-size_big_title:4rem; //64px
 
 // font-family
 $_font-family_text:"Raleway";
-
-// font-style: italic; 
 
 
 //font-weight
 $_font-weight_normal_regular:400;
 $_font-weight_bold:700;
 $_font-weight_black:900;
+
+//transition
+$_transition_normal:0.45s;
 
