--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -29,11 +29,13 @@ $_color_footer_text: #808080;
 $_font-size_nav_text:.8125rem; //13px
 $_font-size_text_min:1.125rem; //18px
 $_font-size_text_title:1.5rem; //24px
-$_font-size_middle_title:1.875rem; //30px
+$_font-size_middle_title:1.875rem;//30px
+$_font-size_biggest_title:2.25rem; //36px
 $_font-size_big_title:4rem; //64px
 
 // font-family
 $_font-family_text:"Raleway";
+$_font-family_title:"Cardo";
 
 
 //font-weight
