--- a/src/scss/banner.scss
+++ b/src/scss/banner.scss
@@ -42,6 +42,26 @@
     width: 23.125rem; //370px
     a {
         @include banner_download_normal;
+        display: block;
         padding: 1.625rem 5.6875rem;
+        text-align: center;
+        animation-name: pulse;
+        animation-duration: 1.5s;
+        animation-iteration-count: infinite;
+        animation-timing-function: ease-in-out;
+        &:hover {
+            transform: scale(2);
+        }
     }
+}
+@keyframes pulse {
+        0%{
+            transform: scale(1);
+        }
+        50%{
+            transform: scale(0.7);
+        }
+        100%{
+            transform: scale(1);
+        }
 }
