--- a/src/scss/download.scss
+++ b/src/scss/download.scss
@@ -1,6 +1,6 @@
 .download {
     background-color: $_background-color_light;
-    padding: 134px 0 114px;
+    padding: 8.375rem 0 7.125rem; //134px 114px
 }
 .download_text {
     display: flex;
@@ -12,20 +12,20 @@
     margin-bottom: 20px;  
         h2 {
             @include download_title;
-            max-width: 1000px;
+            max-width: 62.5rem; //1000px
         }
 }
 .download_description {
     margin-bottom: 50px;
          p {
             @include download_description;
-            max-width: 800px;
+            max-width: 50rem; //800px
         }
 }
 .download_button {
     padding: 1.625rem 0;
     a {
         @include banner_download_normal;
-        padding: 1.625rem 4.9375rem;
+        padding: 1.625rem 4.9375rem; //26px 79px
     }
 }
