--- a/src/scss/our_team.scss
+++ b/src/scss/our_team.scss
@@ -5,33 +5,32 @@
 .our_team-wrap {
     display: grid;
     column-gap: 1.875rem;
-    grid-template-columns: repeat(auto-fit, minmax(270px, 270px));
+    grid-template-columns: repeat(auto-fit, minmax(14.25rem, 16.875rem));
 }
 .our_team-card {
-    width: 270px;
-
+    width: 100%;
 }
 .our_team__img {
     width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 1.875rem;
     img {
         object-fit: cover;
         width: 100%;
-        height: 270px;
+        height: 16.875rem;
         vertical-align: middle;
         overflow: hidden; 
     }
 }
 .our_team__text {
-    margin-bottom: 38px;
+    margin-bottom: 2.375rem;
 }
 .our_team__initials {
     @include our_team__initials;
-    margin-bottom: 6px; 
+    margin-bottom: .375rem; 
 }
 .our_team__job {
     @include our_team__job;
-    margin-bottom: 18px;
+    margin-bottom: 1.125rem;
     text-transform: uppercase;
 }
 .our_team__description {
@@ -41,7 +40,7 @@
     display: flex;
     flex-direction: row;
     li {
-       margin-right: 6px;
+       margin-right: .375rem; //6px
        &:last-child {
         margin-right: 0;
     }
@@ -53,8 +52,8 @@
         display: flex;
         flex-wrap: wrap;
         overflow: hidden;
-        width: 39px;
-        height: 39px;
+        width: 2.4375rem;
+        height: 2.4375rem;
         justify-content: center;
         align-content: center;
     }
