--- a/src/scss/work.scss
+++ b/src/scss/work.scss
@@ -1,7 +1,7 @@
 .work {
     background-color: $_background-color_light;
     .container {
-        max-width: 97rem;
+        max-width: 1562px; //1562px
     }    
 }
 .work-wrap-list {
