--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -12,7 +12,7 @@
 .footer_left,
 .footer_middle,
 .footer_right {
-    width: 370px;
+    max-width: 370px;
     text-align: center;
     h3 {
         @include footer_text_title;
