--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -8,6 +8,103 @@
 .header-scroll {
     background: #252b49;
 }
+.burger {
+    display: none;
+    position: relative;
+    align-items: center;
+    width: 24px;
+    height: 18px;
+    & span {
+        position: absolute;
+        height: 2px;
+        width: 100%;
+        background-color: white;
+        transition: 0.5s;
+        &:first-child {
+            top: 0;
+        }
+        &:last-child {
+            bottom: 0;
+        }
+    }
+    &::before,
+    &::after {
+        content: '';
+        position: absolute;
+        height: 2px;
+        width: 100%;
+        background-color: white;
+        transition: 0.5s;
+    }
+    &.active {
+        span {
+            transform: scale(0);
+        }
+        &::before {
+            transform: rotate(-135deg)
+        }
+        &::after {
+            transform: rotate(135deg)
+        }
+    }
+}
+.menu-wrap {
+    line-height: 63px;
+    position: fixed;
+    z-index: 9990;
+    height: 100%;
+    width: 100%;
+    max-width: none;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: url(../img/background_1.png) no-repeat fixed;
+    background-position: bottom left 56%;
+    padding: 0 20px;
+    flex-direction: column;
+    justify-content: flex-start !important;
+    row-gap: 28px;
+    &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: rgba(37, 43, 73, 0.8);
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+    }
+    .activebox {
+        border-bottom: 1px solid $_color_nav_active;
+    }
+    .navigation {
+        display: flex;
+        width: 100%;
+        max-width: none;
+    }
+    .navigation-list {
+        flex-direction: column;
+        max-width: 25%;
+        li {
+            text-align: start;
+            a {
+                text-align: left;
+                font-size: 13px;
+            }
+        }
+    }
+    animation-name: burger;
+    animation-duration: 0.5s;
+    @keyframes burger {
+        0%{
+            opacity: 0;
+        }
+        100%{
+            opacity: 1;
+        }
+    }
+}
 .header-wrap {
     display: flex;
     justify-content: space-between;
@@ -18,6 +115,7 @@
 }
 .activebox {
     a {
+        height: 100%;
         display: flex;
     }
 }
@@ -63,7 +161,6 @@
                 }
             }
         }
-    
 }   
 
 
