--- a/src/scss/testimonials.scss
+++ b/src/scss/testimonials.scss
@@ -1,7 +1,7 @@
 .testimonials  {
     background-color: $_background-color_light;
     .container {
-        max-width: 97rem;
+        max-width: 1562px;
     }  
 }
 .swiper {
