--- a/src/scss/features.scss
+++ b/src/scss/features.scss
@@ -4,6 +4,7 @@
 }
 .features-wrap {
     display: grid;
+    justify-content: center;
     column-gap: 1.875rem;
     grid-template-columns: repeat(auto-fit, minmax(17.4375rem, 23.125rem));
 }
