--- a/src/scss/testimonials.scss
+++ b/src/scss/testimonials.scss
@@ -50,6 +50,12 @@
         @include testimonials_min_title;
     }
 }
+.swiper-button-next,
+.swiper-button-prev {
+    margin-top: -50px;
+    color: $_background-color_light;
+    --swiper-navigation-size:44px;
+}
 .swiper-pagination {
     --swiper-pagination-bullet-size: .875rem;
     --swiper-pagination-bullet-horizontal-gap: .8125rem;
