--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -8,6 +8,12 @@
 .header-scroll {
     background: #252b49;
 }
+.logo  {
+    img {
+        margin-right: 3px;
+    }
+    
+}
 .burger {
     display: none;
     position: relative;
